@@ -1,3 +1,7 @@
+2022-01-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/bonds.cpp: Updated for Quantlib 1.25
+
 2021-12-28  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Remove unused continuous integration artifact and badge
